[package]
name = "rust-websockets"
version = "0.1.0"
edition = "2021"
description = "A simple Rust WebSockets server for live-reloading SCSS files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
notify = "6.1.1"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.12"
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.5.2", features = ["fs"] }
