[package]
name = "yeti"
version = "0.3.0"
edition = "2021"
description = "A Rust HTTP & WebSockets server for live-reloading modified SCSS files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.5.2", features = ["fs"] }
serde_json = "1.0.117"
futures-util = "0.3.30"
